--- a/expense/hostel_expense/static/style.css
+++ b/expense/hostel_expense/static/style.css
@@ -17,7 +17,7 @@ div.table-title {
 }
 
 .table-title h3 {
-   color: #fafafa;
+   color: rgba(204, 113, 44, 0.44);
    font-size: 30px;
    font-weight: 400;
    font-style:normal;
