--- a/expense/hostel_expense/templates/index.html
+++ b/expense/hostel_expense/templates/index.html
@@ -23,7 +23,7 @@
   <div class="modal-content">
   	<span class="close">×</span>
     <div> 
-    <object type="text/html" data="/add_expense" width="200px" height="200px" style="overflow:auto; ridge blue">
+    <object type="text/html" data="/add_expense" width="100%" height="55%" style="overflow:auto; ridge blue">
     </object></div>
 
   </div>
