--- a/expense/hostel_expense/templates/add_expense.html
+++ b/expense/hostel_expense/templates/add_expense.html
@@ -202,7 +202,7 @@ input[type=password]{
 	<input type="date" name="date">
 	<input type="textfield" name="description" placeholder="Description">
 	<input type="text" name="amount" placeholder="Amount">
-	{{message}}
+	<span>{{message}}</span>
 	<input type="Submit" value="Add" class="button" >
 	</hr>
 </form>
